--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,5 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Vega = "239c3e63-733f-47ad-beb7-a12fde22c578"
+VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
