--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 BioinformaticsBISC195 = "67893044-1481-44cf-8ab6-de350e09ee4e"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
